# rze

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
assets/templates/cava/: rze.tpl
assets/templates/dunst/: colors.conf.tpl
assets/templates/ghostty/: rze.theme.tpl
assets/templates/gtk/: gtk-3.0.rze.css.tpl  gtk-4.0.rze.css.tpl
assets/templates/hypr/: colors.conf.tpl
assets/templates/kitty/: colors.conf.tpl
assets/templates/waybar/: colors.css.tpl
crates/rze-app/: Cargo.toml
crates/rze-app/src/: factories.rs  lib.rs  ports.rs  usecase_apply.rs  usecase_env.rs  usecase_img.rs  usecase_init.rs  usecase_wallhaven.rs
crates/rze-core/: Cargo.toml
crates/rze-core/src/: color.rs  lib.rs  palette.rs  quantize_mediancut.rs  roles.rs  state.rs  template_context.rs  template_engine.rs
crates/rze-infra/: Cargo.toml
crates/rze-infra/src/: atomic_write.rs  curl_downloader.rs  env_detect.rs  ffmpeg_decoder.rs  lib.rs  paths.rs  process_runner.rs  symlink_deploy.rs
crates/rze-infra/src/cosmic/: cosmic_config.rs  cosmic_theme.rs  cosmic_wallpaper.rs  mod.rs
crates/rze-infra/src/resets/: cava.rs  dunst.rs  ghostty.rs  kitty.rs  mod.rs  reset_runner.rs  waybar.rs
crates/rze-infra/src/wallpaper/: mod.rs  nayu.rs
docs/: architecture.md  coding-style.md  config.md  diagrams.md  errors.md  integrations.md  pipeline.md  roadmap.md  templates.md  vision.md
src/: args.rs  main.rs  output.rs  wiring.rs
